--- a/dox1.html
+++ b/dox1.html
@@ -62,8 +62,138 @@
                 <h3 class="font-bold">第6条【入会手続】</h3>
                 <ul>
                     <li class="text-item"><p>(1) 本ジムに入会しようとするときは、本規約を承諾し、Webまたはアプリ上で申込を行うものとします。申込と同時に契約が成立・会員登録が完了し、本ジムおよび、国内の本ジムの諸施設を利用することができます。</p></li>
-                    <li class="text-item"><p>(2) 前項に定める入会申込を行った場合であっても、本部が行う審査の結</p></li>
+                    <li class="text-item"><p>(2) 前項に定める入会申込を行った場合であっても、本部が行う審査の結果、入会が認められない場合があります。審査方法、審査過程、および審査の内容は開示されません。入会が認められない場合には、本部は会員登録を一方的に抹消することができます。</p></li>
+                    <li class="text-item"><p>(3) 会員は、入会後、本ジムから追加の本人確認書類の提示を求められたときは、速やかに応じるものとします。本ジムは、会員がその求めに応じない場合、当該会員の施設の利用を禁止することができます。この場合であっても会員は、ジムの会費およびオプション料金を支払います。</p></li>
                 </ul>
+                <h3 class="font-bold">第7条【変更事項の届出】</h3>
+                <ul>
+                    <li class="text-item"><p>(1)会員は、住所、連絡先及びその他入会申込み事項に変更があった場合には、速やかに所定の手続きにより変更をするものとします。 </p></li>
+                    <li class="text-item"><p>(2)会員への通知は、マイページ内通知または会員から届出のあった最新の電話番号・メールアドレス・住所宛に行い、本部及び加盟店は以後の責任を負いませ ん。</p></li>
+                </ul>
+                <h3 class="font-bold">第8条【個人情報保護】</h3>
+                <p>本ジムは、本ジムの保有する会員の個人情報を、本ジムが別途定める「個人情報保護方針」にしたがって管理します。</p>
+                <h3 class="font-bold">第9条【施設の利用】</h3>
+                <ul>
+                    <li class="text-item"><p>(1)会員が、本ジム諸施設を利用する時は、本部の提供する本ジム会員専用アプリ(「以下、「本アプリ」といいます)からロック解除を行い施設に入館する必要があります。尚、本アプリがダウンロードされている機器をお忘れになりますと入館できません。 </p></li>
+                    <li class="text-item"><p>(2)会員は本アプリを第三者に貸与することはできません。第三者への貸与が発覚した場合、本ジムは、その会員を除名することができます。 </p></li>
+                    <li class="text-item"><p>(3)会員は9条2項で定める行為の他、入館にあたり不正な行為をすることはできません。不正が発覚した場合、その会員を除名することができます。</p></li>
+                </ul>
+                <h3 class="font-bold">第10条【所属及び月額使用料、オプション利用料等】 </h3>
+                <ul>
+                    <li class="text-item"><p>(1) 会員は、日本国内にある、すべての本ジムを利用することができます。</p></li>
+                    <li class="text-item"><p>(2) 会員は、主に利用している加盟店に所属します。</p></li>
+                    <li class="text-item"><p>(3) 会員は、主に利用している加盟店に対して、別途定める月額使用会費を支払います。月額使用料は、本部が、各加盟店からの委託を受け、アプリ内課金により請求します。</p></li>
+                    <li class="text-item"><p>(4)月額使用料は、入会申込日から発生します。</p></li>
+                    <li class="text-item"><p>(5)初月会費の日割額および翌月会費の合計をクレジットカードから引き落としいたします。</p></li>
+                    <li class="text-item"><p>(6)月額使用料の外、本ジムを１回利用するごとに料金が発生します。毎月の引き落とし額に関しては毎月の利用量や各オプションの登録状況に応じて変動します。</p></li>
+                    <li class="text-item"><p>(7) 一旦支払われた諸費用は、法令の定めまたは本クラブが認める理由がある場合を除き、返還しません。</p></li>
+                </ul>
+                <h3 class="font-bold">第11条【退会】</h3>
+                <ul>
+                    <li class="text-item"><p>(1)会員は、有料オプションのロッカーやICタグなどを店舗に返還後、退会を希望する月の20日までに、本ジム所定の手続を完了することにより、当該月の末日（以下「退会日」といいます。）をもって退会できるものとします。</p></li>
+                    <li class="text-item"><p>(2) 本条の退会手続が完了しない場合は、クラブのご利用がなくても通常の会費等が発生します。</p></li>
+                    <li class="text-item"><p>(3) 会費等は、退会手続を月の途中でおこなった場合でも、当該月分を全額支払わなければなりません。</p></li>
+                    <li class="text-item"><p>(4) 会員が自己都合により会費等の全部もしくは一部の滞納が２か月間となった場合、または会費等の全部もしくは一部を支払わない月が２か月連続した場合は、一方的に会員除名とします。また滞納分については、全額現金または加盟店が指定した方法で支払わなくてはなりません。この場合、本会員は再度入会することはできません。</p></li>
+                </ul>
+                <h3 class="font-bold">第12条【会員除名】</h3>
+                <p>会員が下記の各項に該当するときは、本部又は加盟店は該当会員を一方的に除名することができ、会員はその資格を失います。</p>
+                <ul>
+                    <li class="text-item"><p>(1)本ジムの会則、その他諸規則に違反したとき。 </p></li>
+                    <li class="text-item"><p>(2)本ジムの名誉を傷つけ、秩序を乱したとき。</p></li>
+                    <li class="text-item"><p>(3)会費その他の債務を２ヶ月間滞納し本部又は加盟店からの催告に応じないとき。</p></li>
+                    <li class="text-item"><p>(4)入会に際して本部又は加盟店に虚偽の申告をしたと判明したとき。</p></li>
+                    <li class="text-item"><p>(5)レンタルウェアや施設内の備品の盗難が判明したとき。</p></li>
+                    <li class="text-item"><p>(6)本部又は加盟店が本ジム会員としてふさわしくないと判断したとき。</p></li>
+                </ul>
+                <h3 class="font-bold">第13条【会員資格喪失】</h3>
+                <p>会員は下記の各項に該当したときに会員資格を喪失します。</p>
+                <ul>
+                    <li class="text-item"><p>(1)会員が退会したとき。ただし、事前に本部が定める方法により所定の退会手続きを行うものとします。 </p></li>
+                    <li class="text-item"><p>(2)会員が除名されたとき。</p></li>
+                    <li class="text-item"><p>(3)会員が死亡したとき。</p></li>
+                    <li class="text-item"><p>(4)経営上重大な理由により本ジムを閉鎖したとき。</p></li>
+
+                </ul>
+                <h3 class="font-bold">第14条【損害賠償】</h3>
+                <ul>
+                    <li class="text-item"><p>(1)本ジムの利用に際して生じた盗難・紛失については、ＦＣ本部および加盟店は、その故意または重過失による場合を除き、一切の責任を負いません。</p></li>
+                    <li class="text-item"><p>(2)会員が本ジムの施設利用に際して、会員の責に帰すべき事由により会員が受けた損害については、本部及び加盟店は一切損害賠償の責を負いません。 </p></li>
+                    <li class="text-item"><p>(3)会員が本ジムの施設利用に際して、会員の責に帰すべき事由により本部、加盟店または第三者に損害を 与えた場合、会員は速やかにその賠償の責に任ずるものとします。 </p></li>
+                    <li class="text-item"><p>(4)本ジムの利用に際して発生した怪我・病気・事故等については、原則として、会員各自の自己責任とし、本部及び加盟店は責任を負いません。</p></li>
+                </ul>
+                <h3 class="font-bold">第15条【遺失物・忘れ物・放置物】</h3>
+                <ul>
+                    <li class="text-item"><p>(1)会員が本ジムの利用に際して生じた紛失については、原則として、会員各自の自己責任とし、 本部及び加盟店は責任を負いません。</p></li>
+                    <li class="text-item"><p>(2)忘れ物については、１週間を目途に本ジムに保管するものとし、本期間をすぎたものについては、加盟店が原則処分するものとします。</p></li>
+                </ul>
+                <h3 class="font-bold">第16条【その他諸規則の改定】</h3>
+                <p>本部は、必要と認めた場合、本会則・細則・利用規定・その他本ジムの運営・管理に関する事項の改定を行うことができます。尚、改定を実施するときは、 本部は1ヶ月前迄にマイページまたはメールにて告知することとし、改定後は、全会員に適用されるものとします。</p>
+                <h3 class="font-bold">第17条【閉鎖および変更】</h3>
+                <ul>
+                    <li class="text-item"><p>(1)加盟店は、次の理由により、本ジムの全部または一部を閉鎖、もしくは変更する事が出来ます。</p>
+                        <ul>
+                            <li class="text-item"><p>・気象・災害等により会員にその災害が及ぶとＦＣ本部または加盟店が判断し、営業が不可能と認めたとき。</p></li>
+                            <li class="text-item"><p>・法令の制定、改廃、行政指導、社会経済情勢の著しい変化、その他加盟店の経営上等やむを得ない事由が発生したとき。</p></li>
+                            <li class="text-item"><p>・加盟店において経営上等やむを得ない事由が発生した場合にあって、３か月前に予告のうえ解散したとき。但し、解散の原因が天災、地変、公権力の命令、強制その他の不可抗力である場合には、上記の予告期間を合理的に 短縮することができるものとします。</p></li>
+                        </ul>
+                    </li>
+                    <li class="text-item"><p>(2) 本ジムの施設の閉鎖・変更の場合、加盟店が別に定める場合を除き、会員の会費等の支払義務が縮減または停止されることはなく、ＦＣ本部および加盟店は、会員に対し、特別の補償は行いません。 </p></li>
+                </ul>
+                <h3 class="font-bold">第18条【諸規則の厳守】</h3>
+                <p>会員は、本規約(第16条により改定されたものを含みます)および、利用するジムが入居する施設内の諸規則、その他ＦＣ本部および加盟店が定める規則を全て遵守しなければなりません。</p>
+                <h3 class="font-bold">第19条【健康管理】 </h3>
+                <p>会員は、各自の責任において健康管理を行うものとします。</p>
+                <h3 class="font-bold">第20条【遵守事項】</h3>
+                <p>会員は、本ジム利用に当たり、以下を遵守しなければなりません。</p>
+                <ul>
+                    <li class="text-item"><p>(1)本ジムの利用にあたっては、記載されたルール、慣習上のルール、各ジムの説明並びに指示に従わなければなりません。</p></li>
+                    <li class="text-item"><p>(2) 本ジムの利用時は、常に各ジムが定める以下の禁止事項を含むドレスコードを遵守しなければなりません。</p>
+                        <ul>    
+                            <li class="text-item"><p>①伸縮性に欠ける、滑りやすい、器具等に巻き込まれる可能性があるなど、トレーニングにふさわしくない衣服、履物
+                                　(ジーンズ、裸足、スリッパ、サンダル、ヒール、長靴等)</p></li>
+                            <li class="text-item"><p>②上半身あるいは下半身裸、裸足、下着のみ、またはそれに準じる格好
+                                (男女とも露出度が高い服装等は禁止)</p></li>
+                            <li class="text-item"><p>③その他、各クラブまたは加盟店がふさわしくないと判断した服装、履物、服飾品または装飾品</p></li>
+                            <li class="text-item"><p>④タトゥーを露出した状態の格好</p></li>
+                        </ul>
+                    </li>
+                    <li class="text-item"><p>(3) 各ジム内において、以下の行為は禁止されます。</p>
+                        <ul>
+                            <li class="text-item"><p>①スマホ、携帯によるセルフィー撮影以外の撮影</p></li>
+                            <li class="text-item"><p>②本ジムおよびスタッフ、利用者の誹謗中傷および品位を落とすことを目的とした撮影</p></li>
+                            <li class="text-item"><p>③レンタルウェアサービスについて、レンタルウェアを持ち帰る行為</p></li>
+                            <li class="text-item"><p>④施設内における物品販売や営業行為、金銭の貸借、勧誘行為、政治活動、無許可のアンケート協力等の依頼行為、署名活動</p></li>
+                            <li class="text-item"><p>⑤刃物などの危険物や他者または施設、器具を傷つける可能性のある物品の施設内への持ち込み</p></li>
+                            <li class="text-item"><p>⑥正当な理由なく他者の所持品に触れること。</p></li>
+                            <li class="text-item"><p>⑦他の会員またはビジターに対し、パーソナルトレーニングを行い、またはそのように評価される活動を行うこと</p></li>
+                            <li class="text-item"><p>⑧本規約に基づき本ジムの利用を認められていない者を同伴させること。</p></li>
+                            <li class="text-item"><p>⑨物を投げる、壊す、叩く等、他の会員やスタッフが恐怖を感じる危険な行為</p></li>
+                            <li class="text-item"><p>⑩大声、奇声を発する行為、他の会員もしくはスタッフに対する暴力行為、行く手を塞ぐ等の威嚇行為または迷惑行為</p></li>
+                            <li class="text-item"><p>⑪他の会員、ビジター、スタッフに対し、待ち伏せし、後をつけ、またはみだりに話しかける等の行為</p></li>
+                            <li class="text-item"><p>⑫正当な理由なく、面談、電話、その他の方法でスタッフを拘束する等の迷惑行為</p></li>
+                            <li class="text-item"><p>⑬酒気を帯びての入館</p></li>
+                            <li class="text-item"><p>⑭動物を館内に持ち込むこと。ただし、あらかじめ利用する本ジムの加盟店が承諾した補助犬は除く。</p></li>
+                            <li class="text-item"><p>⑮他の会員の諸施設利用を妨げる行為</p></li>
+                            <li class="text-item"><p>⑯クラブの秩序を乱し、またはその名誉、信用あるいは品位を傷付けること。</p></li>
+                        </ul>
+                    </li>
+                </ul>
+                <h3 class="font-bold"> 第21条【入場禁止・退場】</h3>
+                <p>本部又は加盟店は、会員が下記の各項に該当する場合や下記の行為を行っている場合は、その会員を本ジムへの入場禁止及び退場を命じることができます。 </p>
+                <ul>
+                    <li class="text-item"><p>(1)本規約（第20条を含み、これに限られない）および各ジムの諸規則を遵守しない者</p></li>
+                    <li class="text-item"><p>(2)本部または加盟店において、第5条に定める入会資格を欠いていると判断した者、</p></li>
+                    <p>または入会に際し虚偽の申告をし、あるいは入会資格に関わる重要な事実を故意に申告しなかった者</p>
+                    <li class="text-item"><p>(3)本部または加盟店において、体調不良、薬物使用等により正常な施設利用ができないと判断した者</p></li>
+                    <li class="text-item"><p>(4)本部または加盟店において、著しく不潔な身体または服装により、他の会員等の第三者が不快に感じると判断した者</p></li>
+                    <li class="text-item"><p>(5)本規約の手続に従わず会員以外の者を入館させた者および入館した会員以外の者</p></li>
+                    <li class="text-item"><p>(6) 自己都合により会費等の全部もしくは一部を２か月間滞納し、 または会費等の全部もしくは一部を支払わない月が２か月連続した者</p></li>
+                    <li class="text-item"><p>(7) 上記の他、本部または加盟店において入館の禁止または退場を命じることが適切であると判断した者</p></li>
+                </ul>
+                <h3 class="font-bold"> 第22条【休業および時短営業】</h3>
+                <p>加盟店は、加盟店が別途定める定期の休業日を設けるほか、施設整備、その他やむえない事由が発生した場合、臨時休業や時短営業をすることがあります。臨時休業および時短営業をする場合は、事前にその旨をアプリまたはメールにて通知します。</p>
+                <p>なお、時短営業になった場合、会費の返還はいたしません。</p>
+                <p class="text-right mt-5">2021年7月1日制定</p>
             </div>
         </section>
     </main>
