--- a/index.html
+++ b/index.html
@@ -34,12 +34,12 @@
                         <img src="./images/phone-icon.png" alt="" class="image-phone-mobile">
                         <img src="./images/phone-icon-pc.png" alt="" class="image-phone-pc">
                     </div>
-                    <div class="content-slide-header wow slideInLeft" data-wow-duration="2s" data-wow-delay="0.5s">
+                    <div class="content-slide-header wow slideInRight" data-wow-duration="2s" data-wow-delay="0.5s">
                         <span class="title-content">松山姫原店舗 OPEN</span>
-                        <div class="content-slide">
-                            <p class="wow slideInLeft" data-wow-duration="2s" data-wow-delay="1s">いつでもはじめて</p><br>
-                            <p class="wow slideInLeft" data-wow-duration="2s" data-wow-delay="1.5s">いつでもやめられる</p><br>
-                            <p class="wow slideInLeft" data-wow-duration="2s" data-wow-delay="0.5s">使った分だけフィットネス</p>
+                        <div class="content-slide wow slideInRight" data-wow-duration="2s" data-wow-delay="1s">
+                            <p>いつでもはじめて</p><br>
+                            <p>いつでもやめられる</p><br>
+                            <p>使った分だけフィットネス</p>
                             
                         </div>
                     </div>
@@ -50,7 +50,7 @@
                     <div class="main-service">
                         <div class="item-service wow fadeInUp" data-wow-duration="2s" data-wow-delay="0.7s">
                             <h2 class="font-bold">1650円 からジムが使えるサービス</h2>
-                            <p>Pocketは<span class="font-bold">入会費も退会費も継続縛りもない</span>優しいフィットネ スジム。私たちは、誰もが気軽にジムに通える世の中を目指 しています。                       </p>
+                            <p>Pocketは<span class="font-bold">入会費も退会費も継続縛りもない</span>優しいフィットネスジム。私たちは、誰もが気軽にジムに通える世の中を目指 しています。                       </p>
                         </div>
                         <div class="border-service"></div>
                         <div class="item-service wow fadeInUp" data-wow-duration="2s" data-wow-delay="1s">
@@ -75,14 +75,14 @@
                 <div class="container">
                     <div class="wrap-content-list-service">
                         <div class="wrap-list-service list-service-one">
-                            <div class="item-list-service wow fadeInUp" data-wow-duration="2s" data-wow-delay="0.5s">
+                            <div class="item-list-service wow fadeInUp" data-wow-duration="2s" data-wow-delay="0.45s">
                                 <h3 class="font-bold">PRICE</h3>
                                 <p>料金</p>
                                 <div class="img"><img src="./images/s1.png" alt=""></div>
                                 <span class="content">1650円と <br>使った分だけ</span>
                                 <a href="#wrap-price" title="" class="show-tabs"><img src="./images/arrow-down.png" alt=""></a>
                             </div>
-                            <div class="item-list-service wow fadeInUp" data-wow-duration="2s" data-wow-delay="0.9s">
+                            <div class="item-list-service wow fadeInUp" data-wow-duration="2s" data-wow-delay="0.65s">
                                 <h3 class="font-bold">RENTAL</h3>
                                 <p>レンタル</p>
                                 <div class="img"><img src="./images/s2.png" alt=""></div>
@@ -91,21 +91,21 @@
                             </div>
                         </div>
                         <div class="wrap-list-service list-service-two">
-                            <div class="item-list-service wow fadeInUp" data-wow-duration="2s" data-wow-delay="0.5s">
+                            <div class="item-list-service wow fadeInUp" data-wow-duration="2s" data-wow-delay="0.85s">
                                 <h3 class="font-bold">GYM</h3>
                                 <p>ジム</p>
                                 <div class="img"><img src="./images/s3.png" alt=""></div>
                                 <span class="content">24時間365日<br>年中無休で使用可能</span>
                                 <a href="#gym" title="" class="show-tabs"><img src="./images/arrow-down.png" alt=""></a>
                             </div>
-                            <div class="item-list-service wow fadeInUp" data-wow-duration="2s" data-wow-delay="0.9s">
+                            <div class="item-list-service wow fadeInUp" data-wow-duration="2s" data-wow-delay="1.05s">
                                 <h3 class="font-bold">APP</h3>
                                 <p>アプリケーション</p>
                                 <div class="img"><img src="./images/s4.png" alt=""></div>
                                 <span class="content">お支払いも予約も<br>全てスマホのみ</span>
                                 <a href="#app" title="" class="show-tabs"><img src="./images/arrow-down.png" alt=""></a>
                             </div>
-                            <div class="item-list-service wow fadeInUp" data-wow-duration="2s" data-wow-delay="1.3s">
+                            <div class="item-list-service wow fadeInUp" data-wow-duration="2s" data-wow-delay="1.25s">
                                 <h3 class="font-bold">SERVICE</h3>
                                 <p>サービス</p>
                                 <div class="img"><img src="./images/s5.png" alt=""></div>
@@ -196,7 +196,7 @@
                     <div class="box-image text-center">
                         <img src="./images/image-rental.png" alt="">
                     </div>
-                    <h3>便利でお得な「手ぶら de 会員オプション」</h3>
+                    <h3><span>便利でお得な</span>「手ぶら de 会員オプション」</h3>
                     <p>月額1500円（税込）でトレーニングに必要なトレーニング ウエア、タオル、シューズをレンタルできるサービス。ウエアを洗濯する手間もかかりません。さらに、その時の気分でデザイン・カラーを選んでいただくこともできます。</p>
                 </div>
             </section>
@@ -204,7 +204,7 @@
                 <div class="wrap-title">
                     <h2>GYM</h2>
                     <p>ジム</p>
-                    <div class="content-title">24時間365日いつでも通える松山姫原ジム</div>
+                    <div class="content-title"><span>24時間365日いつでも通える</span>松山姫原ジム</div>
                 </div>
                 <div class="container">
                     <div class="wrap-slide-gym wow slideInLeft" data-wow-duration="2s" data-wow-delay="1s" animation-name="fadeInLeft">
@@ -286,7 +286,8 @@
                                         <span class="text-swipe">SWIPE</span>
                                         <span class="text-swipe click-pc">CLICK</span>
                                         <div class="text-detail-swipe">
-                                            <p>スワイプで</p>
+                                            <p class="text-mobile">スワイプで</p>
+                                            <p class="text-pc">クリック</p>
                                             <p>切り替えることが</p>
                                             <p>できます。</p>
                                         </div>
@@ -354,7 +355,7 @@
                             <div class="item">
                                 <a href="" title=""><img src="./images/ser21.png" alt=""></a>
                                 <div class="wrap-text-slide-service text-center">
-                                    <a href="" title="" class="btn-yeylow">＋月額200円~</a>
+                                    <a href="" title="" class="btn-yeylow">＋1回200円~</a>
                                     <p>有人</p>
                                     <p>ライブレッスン</p>
                                 </div>
@@ -377,7 +378,7 @@
             <div class="container">
                 <div class="wrap-footer">
                     <ul>
-                        <li> <a href="./dox1.html" title="">トップページ</a></li><li> <a href="./dox2.html" title=""> 利用規約</a></li><li> <a href="./dox3.html" title="">個人情報保護方針</a></li><li> <a href="" title="">特定商取引法</a></li>
+                        <li> <a href="" title="">トップページ</a></li><li> <a href="" title=""> 利用規約</a></li><li> <a href="" title="">個人情報保護方針</a></li><li> <a href="" title="">特定商取引法</a></li>
                     </ul>
                     <p>© <span id="get-year"></span> POCKET FITNESS | ALL RIGHTS RESERVED.</p>
                 </div>
