--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
                         <img src="./images/image-rental.png" alt="">
                     </div>
                     <h3><span>便利でお得な</span>「手ぶら de 会員オプション」</h3>
-                    <p>月額1500円（税込）でトレーニングに必要なトレーニング ウエア、タオル、シューズをレンタルできるサービス。ウエアを洗濯する手間もかかりません。さらに、その時の気分でデザイン・カラーを選んでいただくこともできます。</p>
+                    <p>月額1500円（税込）でトレーニングに必要なトレーニングウエア、タオル、シューズをレンタルできるサービス。ウエアを洗濯する手間もかかりません。さらに、その時の気分でデザイン・カラーを選んでいただくこともできます。</p>
                 </div>
             </section>
             <section id="gym" class="bg-gray wow fadeInUp" data-wow-duration="2s" data-wow-delay="0.5s">
@@ -216,8 +216,7 @@
                         </div>
                     </div>
                     <div class="wow fadeInUp" data-wow-duration="2s" data-wow-delay="0.75s">
-                        <p class="text-center content-slide-gym">愛媛県松山市姫原に1号店をOPEN。カジュアルな雰囲気で
-                            誰でも気軽に入りやすい内装にこだわっています。</p>
+                        <p class="text-center content-slide-gym">愛媛県松山市姫原に1号店をOPEN。カジュアルな雰囲気で誰でも気軽に入りやすい内装にこだわっています。</p>
                         <div class="wrap-video text-center">
                             <span class="font-bold show-map-gym show-popup">
                                 <img src="./images/vecter.png" alt="" >
@@ -385,6 +384,7 @@
             </div>
         </footer>
 </body>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script src="js/jquery.min.js"></script>
 <script src="js/popper.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
