--- a/dox2.html
+++ b/dox2.html
@@ -27,7 +27,7 @@
             </div>
         </div>
     </header>
-    <main id="main">
+    <main id="main" class="margin-top-header">
         <section id="wrap-dox" class="padding-dox">
             <div class="wrap-content-doxcument">
                 <h1 class="font-bold text-center">プライバシーポリシー</h1>
@@ -46,7 +46,7 @@
                     <li class="text-item"><p>③	ユーザーが利用中のサービスの新機能、更新情報、キャンペーン等及び当社が提供する他のサービスの案内のメールを送付するため</p></li>
                     <li class="text-item"><p>④	メンテナンス、重要なお知らせなど必要に応じたご連絡のため</p></li>
                     <li class="text-item"><p>⑤	利用規約に違反したユーザーや、不正・不当な目的でサービスを利用しようとするユーザーの特定をし、ご利用をお断りするため</p></li>
-                    <li class="text-item"><p>⑥	ユーザーにご自身の登録情報の閲覧や変更、削除、ご利用状況の閲覧を行っていただくた　　　　　め</p></li>
+                    <li class="text-item"><p>⑥	ユーザーにご自身の登録情報の閲覧や変更、削除、ご利用状況の閲覧を行っていただくため</p></li>
                     <li class="text-item"><p>⑦	有料サービスにおいて、ユーザーに利用料金を請求するため</p></li>
                     <li class="text-item"><p>⑧	上記の利用目的に付随する目的</p></li>
                 </ul>
