--- a/dox3.html
+++ b/dox3.html
@@ -46,11 +46,11 @@
                     </li>
                     <li>
                         <div>所在地</div>
-                        <div><p>〒787－0019</p><p>高知県四万十市具同5390　　　</p></div>
+                        <div><p class="form-dox-w">〒787－0019</p><p class="form-dox-w">高知県四万十市具同5390　　　</p></div>
                     </li>
                     <li>
                         <div>お問い合わせ</div>
-                        <div><p>こちら（pr@nature-fitness.com）からお問い合わせください。</p>
+                        <div><p class="form-dox-b">こちら（pr@nature-fitness.com）からお問い合わせください。</p>
                         <p>※弊社電話番号はお客様からのご要望に基づき遅滞なく電子メール
                             にて通知いたします。弊社電話番号が必要なお客様は上記フォーム
                             よりお申し出ください。</p>
@@ -95,11 +95,11 @@
                     <li>
                         <div>動作環境</div>
                         <div>
-                            <p>１.お客様のご都合による返品・キャンセル
-                                商品の性質上、各アプリケーションご購入後の返金・返品はできか
-                                ねます。あらかじめ月額コース対象コンテンツ、利用環境・対応機
-                                種および各アプリケーションの利用環境・対応機種をよくお確かめ
-                                の上、お申込み、もしくはご購入願います。</p>
+                            <p class="form-dox-b">１.お客様のご都合による返品<span>・キャンセル
+                                商品の性質上、各アプリケーションご購入後の返金</span><span>・返品はできか
+                                    ねます。あらかじめ月額コース対象コンテンツ、利用環境</span><span>・対応機
+                                        種および各アプリケーションの利用環境</span><span>・対応機種をよくお確かめ
+                                            の上、お申込み、もしくはご購入願います。</span></p>
                             <p>2.その他、App Store・Google Playなどの各アプリケーション提供サ
                             イトの取り決めに従うこととします。
                             </p>
