--- a/dox1.html
+++ b/dox1.html
@@ -96,8 +96,8 @@
                     <li class="text-item"><p>(4) 会員が自己都合により会費等の全部もしくは一部の滞納が２か月間となった場合、または会費等の全部もしくは一部を支払わない月が２か月連続した場合は、一方的に会員除名とします。また滞納分については、全額現金または加盟店が指定した方法で支払わなくてはなりません。この場合、本会員は再度入会することはできません。</p></li>
                 </ul>
                 <h3 class="font-bold">第12条【会員除名】</h3>
-                <p>会員が下記の各項に該当するときは、本部又は加盟店は該当会員を一方的に除名することができ、会員はその資格を失います。</p>
                 <ul>
+                    <p>会員が下記の各項に該当するときは、本部又は加盟店は該当会員を一方的に除名することができ、会員はその資格を失います。</p>
                     <li class="text-item"><p>(1)本ジムの会則、その他諸規則に違反したとき。 </p></li>
                     <li class="text-item"><p>(2)本ジムの名誉を傷つけ、秩序を乱したとき。</p></li>
                     <li class="text-item"><p>(3)会費その他の債務を２ヶ月間滞納し本部又は加盟店からの催告に応じないとき。</p></li>
@@ -106,8 +106,8 @@
                     <li class="text-item"><p>(6)本部又は加盟店が本ジム会員としてふさわしくないと判断したとき。</p></li>
                 </ul>
                 <h3 class="font-bold">第13条【会員資格喪失】</h3>
-                <p>会員は下記の各項に該当したときに会員資格を喪失します。</p>
                 <ul>
+                    <p>会員は下記の各項に該当したときに会員資格を喪失します。</p>
                     <li class="text-item"><p>(1)会員が退会したとき。ただし、事前に本部が定める方法により所定の退会手続きを行うものとします。 </p></li>
                     <li class="text-item"><p>(2)会員が除名されたとき。</p></li>
                     <li class="text-item"><p>(3)会員が死亡したとき。</p></li>
@@ -129,7 +129,7 @@
                 <h3 class="font-bold">第16条【その他諸規則の改定】</h3>
                 <p>本部は、必要と認めた場合、本会則・細則・利用規定・その他本ジムの運営・管理に関する事項の改定を行うことができます。尚、改定を実施するときは、 本部は1ヶ月前迄にマイページまたはメールにて告知することとし、改定後は、全会員に適用されるものとします。</p>
                 <h3 class="font-bold">第17条【閉鎖および変更】</h3>
-                <ul>
+                <ul class="form-17">
                     <li class="text-item"><p>(1)加盟店は、次の理由により、本ジムの全部または一部を閉鎖、もしくは変更する事が出来ます。</p>
                         <ul>
                             <li class="text-item"><p>・気象・災害等により会員にその災害が及ぶとＦＣ本部または加盟店が判断し、営業が不可能と認めたとき。</p></li>
@@ -144,10 +144,10 @@
                 <h3 class="font-bold">第19条【健康管理】 </h3>
                 <p>会員は、各自の責任において健康管理を行うものとします。</p>
                 <h3 class="font-bold">第20条【遵守事項】</h3>
-                <p>会員は、本ジム利用に当たり、以下を遵守しなければなりません。</p>
                 <ul>
+                    <p>会員は、本ジム利用に当たり、以下を遵守しなければなりません。</p>
                     <li class="text-item"><p>(1)本ジムの利用にあたっては、記載されたルール、慣習上のルール、各ジムの説明並びに指示に従わなければなりません。</p></li>
-                    <li class="text-item"><p>(2) 本ジムの利用時は、常に各ジムが定める以下の禁止事項を含むドレスコードを遵守しなければなりません。</p>
+                    <li class="text-item"><p class="form-20-a">(2) 本ジムの利用時は、常に各ジムが定める以下の禁止事項を含むドレスコードを遵守しなければなりません。</p>
                         <ul>    
                             <li class="text-item"><p>①伸縮性に欠ける、滑りやすい、器具等に巻き込まれる可能性があるなど、トレーニングにふさわしくない衣服、履物
                                 　(ジーンズ、裸足、スリッパ、サンダル、ヒール、長靴等)</p></li>
@@ -157,7 +157,7 @@
                             <li class="text-item"><p>④タトゥーを露出した状態の格好</p></li>
                         </ul>
                     </li>
-                    <li class="text-item"><p>(3) 各ジム内において、以下の行為は禁止されます。</p>
+                    <li class="text-item"><p class="form-20-b">(3) 各ジム内において、以下の行為は禁止されます。</p>
                         <ul>
                             <li class="text-item"><p>①スマホ、携帯によるセルフィー撮影以外の撮影</p></li>
                             <li class="text-item"><p>②本ジムおよびスタッフ、利用者の誹謗中傷および品位を落とすことを目的とした撮影</p></li>
@@ -179,8 +179,8 @@
                     </li>
                 </ul>
                 <h3 class="font-bold"> 第21条【入場禁止・退場】</h3>
-                <p>本部又は加盟店は、会員が下記の各項に該当する場合や下記の行為を行っている場合は、その会員を本ジムへの入場禁止及び退場を命じることができます。 </p>
                 <ul>
+                    <p>本部又は加盟店は、会員が下記の各項に該当する場合や下記の行為を行っている場合は、その会員を本ジムへの入場禁止及び退場を命じることができます。 </p>
                     <li class="text-item"><p>(1)本規約（第20条を含み、これに限られない）および各ジムの諸規則を遵守しない者</p></li>
                     <li class="text-item"><p>(2)本部または加盟店において、第5条に定める入会資格を欠いていると判断した者、</p></li>
                     <p>または入会に際し虚偽の申告をし、あるいは入会資格に関わる重要な事実を故意に申告しなかった者</p>
