--- a/dox2.html
+++ b/dox2.html
@@ -39,8 +39,8 @@
                 <p>当社は、ユーザーが利用登録をする際に氏名、生年月日、住所、電話番号、メールアドレス、銀行口座番号、クレジットカード番号、運転免許証番号などの個人情報をお尋ねすることがあります。また、ユーザーと提携先などとの間でなされたユーザーの個人情報を含む取引記録や決済に関する情報を、当社の提携先（情報提供元、広告主、広告配信先などを含みます。以下、｢提携先｣といいます。）などから収集することがあります。</p>
                 
                  <h3 class="font-bold">第3条（個人情報を収集・利用する目的）</h3> 
-                <p>当社が個人情報を収集・利用する目的は、以下のとおりです。</p>
                 <ul class="margin-top-ul">
+                    <p>当社が個人情報を収集・利用する目的は、以下のとおりです。</p>
                     <li class="text-item"><p>①	当社サービスの提供・運営のため</p></li>
                     <li class="text-item"><p>②	ユーザーからのお問い合わせに回答するため（本人確認を行うことを含む）</p></li>
                     <li class="text-item"><p>③	ユーザーが利用中のサービスの新機能、更新情報、キャンペーン等及び当社が提供する他のサービスの案内のメールを送付するため</p></li>
@@ -58,12 +58,12 @@
                 <h3 class="font-bold">第5条（個人情報の第三者提供）</h3>
                 <ul>
                     <li class="text-item">
-                        <p>１　当社は、次に掲げる場合を除いて、あらかじめユーザーの同意を得ることなく、第三者に個人情報を提供することはありません。ただし、個人情報保護法その他の法令で認められる場合を除きます。</p>
+                        <p class="form-20-a">(1)  当社は、次に掲げる場合を除いて、あらかじめユーザーの同意を得ることなく、第三者に個人情報を提供することはありません。ただし、個人情報保護法その他の法令で認められる場合を除きます。</p>
                         <ul>
                             <li class="text-item"><p>①	人の生命、身体または財産の保護のために必要がある場合であって、本人の同意を得ることが困難であるとき</p></li>
                             <li class="text-item"><p>②	公衆衛生の向上または児童の健全な育成の推進のために特に必要がある場合であって、本人の同意を得ることが困難であるとき</p></li>
                             <li class="text-item"><p>③	国の機関もしくは地方公共団体またはその委託を受けた者が法令の定める事務を遂行することに対して協力する必要がある場合であって、本人の同意を得ることにより当該事務の遂行に支障を及ぼすおそれがあるとき</p></li>
-                            <li class="text-item"><p>④	予め次の事項を告知あるいは公表し、かつ当社が個人情報保護委員会に届出をしたとき</p>
+                            <li class="text-item"><p class="form-20-a">④	予め次の事項を告知あるいは公表し、かつ当社が個人情報保護委員会に届出をしたとき</p>
                                 <ul>
                                     <li class="text-item"><p>・利用目的に第三者への提供を含むこと</p></li>
                                     <li class="text-item"><p>・第三者に提供されるデータの項目</p></li>
@@ -75,7 +75,7 @@
 
                         </ul>
                     </li>
-                    <li class="text-item"><p>２　前項の定めにかかわらず、次に掲げる場合には、当該情報の提供先は第三者に該当しないものとします。</p>
+                    <li class="text-item"><p class="form-20-b">(2)　前項の定めにかかわらず、次に掲げる場合には、当該情報の提供先は第三者に該当しないものとします。</p>
                         <ul>
                             <li class="text-item"><p>①	当社が利用目的の達成に必要な範囲内において個人情報の取扱いの全部または一部を委託する場合</p></li>
                             <li class="text-item"><p>②	合併その他の事由による事業の承継に伴って個人情報が提供される場合</p></li>
@@ -85,32 +85,32 @@
                 </ul>
                 <h3 class="font-bold">第6条（個人情報の開示）</h3>
                 <ul>
-                    <li class="text-item"><p>１ 当社は、本人から個人情報の開示を求められたときは、本人に対し、遅滞なくこれを開示します。ただし、開示することにより次のいずれかに該当する場合は、その全部または一部を開示しないこともあり、開示しない決定をした場合には、その旨を遅滞なく通知します。なお、個人情報の開示に際しては、1件あたり1,000円の手数料を申し受けます。</p>
+                    <li class="text-item"><p class="form-20-a">(１) 当社は、本人から個人情報の開示を求められたときは、本人に対し、遅滞なくこれを開示します。ただし、開示することにより次のいずれかに該当する場合は、その全部または一部を開示しないこともあり、開示しない決定をした場合には、その旨を遅滞なく通知します。なお、個人情報の開示に際しては、1件あたり1,000円の手数料を申し受けます。</p>
                         <ul>
                             <li class="text-item"><p>①	本人または第三者の生命、身体、財産その他の権利利益を害するおそれがある場合</p></li>
                             <li class="text-item"><p>②	当社の業務の適正な実施に著しい支障を及ぼすおそれがある場合</p></li>
-                            <li class="text-item"><p>③	その他法令に違反することとなる場合</p></li>
+                            <li class="text-item"><p class="form-20-a">③	その他法令に違反することとなる場合</p></li>
                         </ul>
                     </li>
-                    <li class="text-item"><p>２　前項の定めにかかわらず、履歴情報および特性情報などの個人情報以外の情報については、原則として開示いたしません。</p></li>
+                    <li class="text-item"><p>(２)　前項の定めにかかわらず、履歴情報および特性情報などの個人情報以外の情報については、原則として開示いたしません。</p></li>
                 </ul>
                 <h3 class="font-bold">第7条（個人情報の訂正および削除）</h3>
                 <ul>
-                    <li class="text-item"><p>１　ユーザーは、当社の保有する自己の個人情報が誤った情報である場合には、当社が定める手続きにより、当社に対して個人情報の訂正、追加または削除（以下、「訂正等」といいます。）を請求することができます。</p></li>
-                    <li class="text-item"><p>２　当社は、ユーザーから前項の請求を受けてその請求に応じる必要があると判断した場合には、遅滞なく、当該個人情報の訂正等を行うものとします。</p></li>
-                    <li class="text-item"><p>３　当社は、前項の規定に基づき訂正等を行った場合、または訂正等を行わない旨の決定をしたときは遅滞なく、これをユーザーに通知します。</p></li>
+                    <li class="text-item"><p>(１)　ユーザーは、当社の保有する自己の個人情報が誤った情報である場合には、当社が定める手続きにより、当社に対して個人情報の訂正、追加または削除（以下、「訂正等」といいます。）を請求することができます。</p></li>
+                    <li class="text-item"><p>(２)　当社は、ユーザーから前項の請求を受けてその請求に応じる必要があると判断した場合には、遅滞なく、当該個人情報の訂正等を行うものとします。</p></li>
+                    <li class="text-item"><p>(３)　当社は、前項の規定に基づき訂正等を行った場合、または訂正等を行わない旨の決定をしたときは遅滞なく、これをユーザーに通知します。</p></li>
                 </ul>
                 <h3 class="font-bold">第8条（個人情報の利用停止等）</h3>
                 <ul>
-                    <li class="text-item"><p>１　当社は、本人から、個人情報が、利用目的の範囲を超えて取り扱われているという理由、または不正の手段により取得されたものであるという理由により、その利用の停止または消去（以下、「利用停止等」といいます。）を求められた場合には、遅滞なく必要な調査を行います。</p></li>
-                    <li class="text-item"><p>２　前項の調査結果に基づき、その請求に応じる必要があると判断した場合には、遅滞なく、当該個人情報の利用停止等を行います。</p></li>
-                    <li class="text-item"><p>３　当社は、前項の規定に基づき利用停止等を行った場合、または利用停止等を行わない旨の決定をしたときは、遅滞なく、これをユーザーに通知します。</p></li>
-                    <li class="text-item"><p>４　前2項にかかわらず、利用停止等に多額の費用を有する場合その他利用停止等を行うことが困難な場合であって、ユーザーの権利利益を保護するために必要なこれに代わるべき措置をとれる場合は、この代替策を講じるものとします。</p></li>
+                    <li class="text-item"><p>(１)　当社は、本人から、個人情報が、利用目的の範囲を超えて取り扱われているという理由、または不正の手段により取得されたものであるという理由により、その利用の停止または消去（以下、「利用停止等」といいます。）を求められた場合には、遅滞なく必要な調査を行います。</p></li>
+                    <li class="text-item"><p>(２)　前項の調査結果に基づき、その請求に応じる必要があると判断した場合には、遅滞なく、当該個人情報の利用停止等を行います。</p></li>
+                    <li class="text-item"><p>(３)　当社は、前項の規定に基づき利用停止等を行った場合、または利用停止等を行わない旨の決定をしたときは、遅滞なく、これをユーザーに通知します。</p></li>
+                    <li class="text-item"><p>(４)　前2項にかかわらず、利用停止等に多額の費用を有する場合その他利用停止等を行うことが困難な場合であって、ユーザーの権利利益を保護するために必要なこれに代わるべき措置をとれる場合は、この代替策を講じるものとします。</p></li>
                 </ul>
                 <h3 class="font-bold">第9条（プライバシーポリシーの変更）</h3>
                 <ul>
-                    <li class="text-item"><p>１　本ポリシーの内容は、法令その他本ポリシーに別段の定めのある事項を除いて、ユーザーに通知することなく、変更することができるものとします。</p></li>
-                    <li class="text-item"><p>２　当社が別途定める場合を除いて、変更後のプライバシーポリシーは、本ウェブサイトに掲載したときから効力を生じるものとします。</p></li>
+                    <li class="text-item"><p>(１)　本ポリシーの内容は、法令その他本ポリシーに別段の定めのある事項を除いて、ユーザーに通知することなく、変更することができるものとします。</p></li>
+                    <li class="text-item"><p>(２)　当社が別途定める場合を除いて、変更後のプライバシーポリシーは、本ウェブサイトに掲載したときから効力を生じるものとします。</p></li>
                 </ul>
                 <h3 class="font-bold">第10条（お問い合わせ窓口）</h3>
                 <p>本ポリシーに関するお問い合わせは、下記の窓口までお願いいたします。</p>
