--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
                     <div class="content-slide-header wow slideInRight" data-wow-duration="2s" data-wow-delay="0.5s">
                         <span class="title-content">松山姫原店舗 OPEN</span>
                         <div class="content-slide wow slideInRight" data-wow-duration="2s" data-wow-delay="1s">
-                            <p>いつでもはじめて</p><br>
-                            <p>いつでもやめられる</p><br>
+                            <p>いつでもはじめて</p>
+                            <p>いつでもやめられる</p>
                             <p>使った分だけフィットネス</p>
                             
                         </div>
@@ -62,11 +62,12 @@
                         <div class="img-fade-top"><img src="./images/dan.png" alt=""></div>
                         <div class="img-fade-bottom"><img src="./images/sp.png" alt=""></div>
                     </div>
+                    <div class="scroll">
+                        <div class="scroll-txt">SCROLL</div>
+                        <div class="scroll-animation"></div>
+                    </div>
                 </div>
-                <div class="scroll">
-                    <div class="scroll-txt">SCROLL</div>
-                    <div class="scroll-animation"></div>
-                </div>
+        
             </section>
             <section id="list-service" class="bg-white"> 
                 <div class="wrap-title">
@@ -119,7 +120,7 @@
                         <div class="wrap-animation wrap-video-animate hide-show-popup">
                             <h3 class="font-bold">How to Pocket</h3>
                             <div class="box-video-youtube box-content-animation">
-                                <iframe width="938" height="483" src="https://www.youtube.com/embed/mAUCLQVuADA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                                <iframe width="1280" height="367" src="https://www.youtube.com/embed/Crrpah_w3Jw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                             </div>
                         </div>
                     </div>
@@ -175,7 +176,7 @@
                                                 <img src="./images/p3.png" alt="">
                                             </div>
                                         </div>
-                                        <p class="mt-4">ジム利用料金 はどれだけ通っても<span class="font-bold">5500円までしか上がりません。</span>
+                                        <p class="mb-4">ジム利用料金 はどれだけ通っても<span class="font-bold">5500円までしか上がりません。</span>
                                             つまり、最大「1650円＋5500円＝7150円(税込)」。毎日通う月があっても安心の仕組みです。</p>
                                     </div>
                                 </div>
@@ -223,7 +224,7 @@
                                 <h3 class="font-bold">POCKET  松山姫原店</h3>
                                 <div class="box-video-youtube box-content-animation">
                                     <div class="wrap-ifame">
-                                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d828.2267978559632!2d132.7585865183778!3d33.866282625635066!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x354fe5b233dcec45%3A0xdcffc31af967b045!2zMi1jaMWNbWUtNC0yOCBIaW1lYmFyYSwgTWF0c3V5YW1hLCBFaGltZSA3OTEtODAxMiwgTmjhuq10IELhuqNu!5e0!3m2!1svi!2s!4v1625768107992!5m2!1svi!2s" width="100%" height="524" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d828.2267978559632!2d132.7585865183778!3d33.866282625635066!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x354fe5b233dcec45%3A0xdcffc31af967b045!2zMi1jaMWNbWUtNC0yOCBIaW1lYmFyYSwgTWF0c3V5YW1hLCBFaGltZSA3OTEtODAxMiwgTmjhuq10IELhuqNu!5e0!3m2!1svi!2s!4v1625768107992!5m2!1svi!2s" width="100%" height="367" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
                                         <div class="location-gym text-left">
                                             <p>〒791-8012</p>
                                             <p>愛媛県松山市姫原2丁目4番28号</p>
@@ -296,6 +297,7 @@
                 </div>
                 <div class='marquee'>
                     <div class='marquee-text'>
+                        <img src="./images/text-slide.png" alt="">
                         <img src="./images/text-slide.png" alt="">
                         <img src="./images/text-slide.png" alt="">
                         <img src="./images/text-slide.png" alt="">
