--- a/index.html
+++ b/index.html
@@ -422,7 +422,7 @@
             <div class="container">
                 <div class="wrap-footer">
                     <ul>
-                        <li> <a href="" title="">トップページ</a></li><li> <a href="" title=""> 利用規約</a></li><li> <a href="" title="">個人情報保護方針</a></li><li> <a href="" title="">特定商取引法</a></li>
+                        <li> <a href="" title="">トップページ</a></li><li> <a href="./dox1.html" title=""> 利用規約</a></li><li> <a href="./dox2.html" title="">個人情報保護方針</a></li><li> <a href="./dox3.html" title="">特定商取引法</a></li>
                     </ul>
                     <p>© <span id="get-year"></span> POCKET FITNESS | ALL RIGHTS RESERVED.</p>
                 </div>
