--- a/index.html
+++ b/index.html
@@ -31,12 +31,12 @@
                     <li id="menu-item-29" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-29"><a href="" class="btn btn-white" title="">Log in</a></li>
                 </ul>
                 <ul id="menu-header-menu" class="box-header menu-header">
-                    <li id="menu-item-30" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-30"><a href="./answer.html" class="btn btn-transparent" title="">目的から探す</a></li>
-                    <li id="menu-item-31" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-31"><a href="./company-information.html" class="btn btn-transparent mobile" title="">トラブルから探す</a></li>
-                    <li id="menu-item-32" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-32"><a href="./contact-thanks.html" class="btn btn-white" title="">よくある質問</a></li>
-                    <li id="menu-item-33" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-33"><a href="./contact.html" class="btn btn-transparent" title="">運営会社</a></li>
-                    <li id="menu-item-34" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-34"><a href="./contents-2.html" class="btn btn-transparent mobile" title="">お問い合わせ</a></li>
-                    <li id="menu-item-35" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-35"><a href="./search_result.html" class="btn btn-white" title="">Log in</a></li>
+                    <li id="menu-item-30" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-30"><a href="" class="btn btn-transparent" title="">目的から探す</a></li>
+                    <li id="menu-item-31" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-31"><a href="" class="btn btn-transparent mobile" title="">トラブルから探す</a></li>
+                    <li id="menu-item-32" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-32"><a href="" class="btn btn-white" title="">よくある質問</a></li>
+                    <li id="menu-item-33" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-33"><a href="" class="btn btn-transparent" title="">運営会社</a></li>
+                    <li id="menu-item-34" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-34"><a href="" class="btn btn-transparent mobile" title="">お問い合わせ</a></li>
+                    <li id="menu-item-35" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-35"><a href="" class="btn btn-white" title="">Log in</a></li>
                 </ul>
             </div>
         </div>
